--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -13,6 +13,10 @@
 .title-text {
   color: #333333;
   text-decoration: none;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .title {
