--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -16,7 +16,6 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 
 .title {
@@ -27,7 +26,7 @@
   height: 27px;
   line-height: 1.1;
   overflow:hidden;
-  padding: 5px 3px 0.3em;
+  padding: 4px 3px 6px;
   position:relative;
   text-align:center;
   text-overflow: ellipsis;
