Show ellipsis for title in contributed view

--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -45,8 +45,14 @@
 
 .title-2 {
   height: 19px;
+}
+
+.title-2 a {
+  height: 19px;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
+  display: block;
 }
 
 .contributor {
