--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -183,11 +183,17 @@ cedar-card {
   z-index: 2;
   position: absolute;
   top:0;
-  bottom:0;
+  bottom:35px;
   left:0;
   right:0;
   padding: 10px 10px 15px;
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(0, 0, 0, 0.45);
+}
+
+.processing {
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .error-uploading {
@@ -217,5 +223,9 @@ cedar-card {
 @media all and (max-width: 979px) {
   .title {
     padding: 4px 3px 0px; 
+  }
+
+  .overlay {
+    bottom: 32px;
   }
 }
