set fs-5h class to be white

--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -200,7 +200,7 @@ cedar-card {
   color: white;
 }
 
-.processing {
+.processing, .processing > .fs-h5 {
   color: white;
   text-align: center;
 }
