--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -10,12 +10,16 @@
   -webkit-user-drag: element;
 }
 
-.title-text {
+.title-text, .title-text:visited {
   color: #333333;
   text-decoration: none;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.title-text:hover {
+  color: #333333;
 }
 
 .title {
