--- a/audio-artifact/styles.css
+++ b/audio-artifact/styles.css
@@ -124,6 +124,7 @@
   line-height: 1.21;
   font-size: 18px;
   font-size: 1.125rem;
+  min-height: 36px;
   margin: 0 0 3px 0;
   height: 2.4em;
   padding: 8px 10px 0;
