--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -205,6 +205,7 @@ cedar-card {
   padding: 10px 0px;
   text-align: center;
   color: white;
+  z-index: 2;
 }
 
 .processing, .processing > .fs-h5 {
