--- a/birch-artifact-grid-item-preview.css
+++ b/birch-artifact-grid-item-preview.css
@@ -50,8 +50,8 @@
 .grid-item-preview-overlay {
   position: absolute;
   top: 0px;
-  width: 170px;
-  height: 207px;
+  width: 100%;
+  height: calc(100% - 10px);
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.4);
 }
