--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -257,6 +257,10 @@ cedar-card {
   .overlay {
     bottom: 33px;
   }
+
+  .title .title-input {
+    font-size: 16px;
+  }
 }
 
 @media all and (max-width: 767px) {
