fixing styling and error handling

--- a/birch-artifact-grid-item.css
+++ b/birch-artifact-grid-item.css
@@ -10,7 +10,7 @@
   -webkit-user-drag: element;
 }
 
-.title-text, .title-text:visited {
+.title-text, .title-text:visited, .title-text:active, .title-text:focus {
   color: #333333;
   text-decoration: none;
   display: -webkit-box;
