Updated bower.json and migrated component usages
These updates are for components migrated from
`FamilySearchElements` and renamed to begin with `fs`.

--- a/fs-artifact-grid-item.css
+++ b/fs-artifact-grid-item.css
@@ -123,10 +123,10 @@
   top: calc(50% - 11px);
 }
 
-cedar-card {
+fs-card {
   width: var(--grid-item-card-width);
   max-width: 170px;
-  --cedar-card-body: {
+  --fs-card-body: {
     padding: 0;
     width: 100%;
     @apply(--grid-item-card-styles);
