Revert "Switch to fs-styles v3"
This reverts commit f4f09762f5f259a23809787f6ab245749efac59d.

--- a/fs-artifact-grid-item.css
+++ b/fs-artifact-grid-item.css
@@ -123,14 +123,14 @@
   top: calc(50% - 11px);
 }
 
-.fs-card {
-  width: calc(46vw - 20px);
+fs-card {
+  width: var(--grid-item-card-width);
   max-width: 170px;
-}
-
-.fs-card__body {
-  padding: 0;
-  width: 100%;
+  --fs-card-body: {
+    padding: 0;
+    width: 100%;
+    @apply(--grid-item-card-styles);
+  };
 }
 
 .loading-icon {
