--- a/audio-artifact/styles.css
+++ b/audio-artifact/styles.css
@@ -133,3 +133,15 @@
   text-overflow: ellipsis;
   font-family: museo;
 }
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-row-center {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
